07-kubernetes/05-network-part-2/src/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: default
  labels:
    app: backend-svc
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: backend-http
      protocol: TCP
      port: 9002
      targetPort: 80
    - name: backend-https
      protocol: TCP
      port: 9003
      targetPort: 443
