07-kubernetes/05-network-part-2/src/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: default
  labels:
    app: frontend-svc
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: frontend-http
      protocol: TCP
      port: 9001
      targetPort: 80
