07-kubernetes/05-network-part-2/src/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tls
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - application.info
      secretName: tls-certificate
  rules:
    - host: application.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 9001
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 9002
